
package Model;

import Utils.Time;

/**
 *
 * @author jorge
 */
public class Task {
    
    /**
     * The id of the Task
     */
    String idTask;
    
    /**
     * The description of the Task
     */
    String description;
    
    /**
     * 
     */
    Time time;
    
    double costHour;
    
    String TaskCategory;
    
    boolean isPayed;
    
    boolean isFinished;
    
    
    
}
