@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform{
}
class Freelancer {
  -String idF
  -String name
  -String levelExpertise
  -String email
  -String nif
  -String ibanAccount
  -String coutry
}

class Organization {
  -String nome
  -String email
  -String nif
}

class Collaborator{
  -String nome
  -String email
}

class Task {
  -String idT
  -String description
  -Time timeDuration
  -double costHour
  -String taskCategory
}


class User {
}


class Transaction {
  -Data endDate
  -double delay
  -String descriptionOfQuality
}


class Payment{
}


Freelancer "1" -- "1" Transaction: receives >
Task "1..*" -- "1" Freelancer: made by >
Platform "1" -- "1..*" Transaction: has >
Platform "1" -- "1..*" Organization: has registered >
Platform "1" -- "1..*" Freelancer: has >
Platform "1" -- "1..*" Task: has registered >
Organization "1" -- "1" Collaborator: has >
Transaction "1" -- "1" Payment: results in >
Transaction "1" -- "1" Task: has >
Collaborator "1" -- "1..*" Transaction: creates >
Collaborator "1" -- "1" User: acts as >




@enduml


